# SimOC

./: .gitignore  README.md  SimOC_Paper_v5.0.docx  app.py  demo.ipynb  pyproject.toml
data/: sample_order_process.json
simoc/: __init__.py  __main__.py
simoc/discovery/: __init__.py  behavioral.py  cardinality.py  data_structures.py  interaction_graph.py  patterns.py
simoc/evaluation/: __init__.py  _helpers.py  baselines.py  experiment.py  metrics.py  visualization.py
simoc/ingestion/: __init__.py  data_structures.py  loader.py  stats.py  validator.py
simoc/simulation/: __init__.py  agent.py  data_structures.py  mediator.py  runner.py
tests/test_discovery/: conftest.py  test_behavioral.py  test_cardinality.py  test_interaction_graph.py  test_patterns.py
tests/test_evaluation/: conftest.py  test_evaluation.py
tests/test_ingestion/: conftest.py  test_ingestion.py
tests/test_output/: conftest.py  test_ocel_export.py
tests/test_simulation/: conftest.py  test_simulation.py
