[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simoc"
version = "0.1.0"
description = "Agent-based simulation of object-centric processes discovered from OCEL 2.0 event logs"
requires-python = ">=3.10"
dependencies = [
    "pm4py>=2.7",
    "scipy>=1.11",
    "numpy>=1.24",
    "simpy>=4.1",
    "scikit-learn>=1.3",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["simoc*"]
